--- a/test/xrc.UnitTest/App.config
+++ b/test/xrc.UnitTest/App.config
@@ -1,12 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
 
 	<configSections>
-		<section name="xrc" type="xrc.Configuration.XrcSection, xrc.Core" />
+		<section name="xrc" type="xrc.Configuration.XrcSection, xrc.Core"/>
 	</configSections>
 
 	<xrc>
-		<rootPath virtualPath="~/sampleWebSiteStructure" />
+		<rootPath virtualPath="~/sampleWebSiteStructure"/>
 	</xrc>
 
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
