--- a/demo/DemoWebSite/packages.config
+++ b/demo/DemoWebSite/packages.config
@@ -1,10 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.2.0" targetFramework="net40" />
-  <package id="Castle.Windsor" version="3.2.0" targetFramework="net40" />
-  <package id="jQuery" version="1.7.2" />
-  <package id="knockoutjs" version="2.1.0" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
-  <package id="Twitter.Bootstrap" version="2.0.4.1" />
-  <package id="WebActivator" version="1.5.2" targetFramework="net40" />
+  <package id="Castle.Core" version="3.2.0" targetFramework="net45" />
+  <package id="Castle.Windsor" version="3.2.0" targetFramework="net45" />
+  <package id="jQuery" version="1.7.2" targetFramework="net45" />
+  <package id="knockoutjs" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Twitter.Bootstrap" version="2.0.4.1" targetFramework="net45" />
+  <package id="WebActivator" version="1.5.2" targetFramework="net45" />
+  <package id="WebGrease" version="1.1.0" targetFramework="net45" />
 </packages>
