--- a/src/xrc.Core/xrc.Core.csproj
+++ b/src/xrc.Core/xrc.Core.csproj
@@ -42,7 +42,7 @@
   <ItemGroup>
     <Reference Include="Castle.Core, Version=3.2.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Castle.Core.3.2.0\lib\net40-client\Castle.Core.dll</HintPath>
+      <HintPath>..\..\packages\Castle.Core.3.2.0\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
     <Reference Include="DynamicExpresso.Core, Version=0.8.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -52,8 +52,6 @@
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
-    <Reference Include="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
-    <Reference Include="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -108,7 +106,6 @@
     <Compile Include="Pages\Parsers\PageDefinition.cs" />
     <Compile Include="Pages\Parsers\PageParserService.cs" />
     <Compile Include="Pages\Parsers\ResourceParserBase.cs" />
-    <Compile Include="Pages\Parsers\RazorParser.cs" />
     <Compile Include="Pages\Parsers\XHtmlParser.cs" />
     <Compile Include="Pages\Parsers\XrcParser.cs" />
     <Compile Include="Pages\Parsers\XsltParser.cs" />
@@ -118,9 +115,12 @@
     <Compile Include="Pages\Page.cs" />
     <Compile Include="Pages\Providers\IPageProviderService.cs" />
     <Compile Include="Pages\ParametricUriSegment.cs" />
-    <Compile Include="Razor\XrcWebViewPageExtension.cs" />
-    <Compile Include="Razor\ModuleInterceptor.cs" />
-    <Compile Include="Razor\XrcWebViewPage.cs" />
+    <Compile Include="Results\BytesResult.cs" />
+    <Compile Include="Results\FilePathResult.cs" />
+    <Compile Include="Results\FileResult.cs" />
+    <Compile Include="Results\StreamResult.cs" />
+    <Compile Include="Results\IResult.cs" />
+    <Compile Include="Results\StringResult.cs" />
     <Compile Include="Routing\XrcRoute.cs" />
     <Compile Include="Views\RawView.cs" />
     <Compile Include="Views\HtmlView.cs" />
@@ -169,7 +169,6 @@
     <Compile Include="Views\XHtmlView.cs" />
     <Compile Include="Views\JsonView.cs" />
     <Compile Include="Views\XsltView.cs" />
-    <Compile Include="Views\RazorView.cs" />
     <Compile Include="Views\IView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Kernel\XrcUrl.cs" />
