--- a/test/xrc.UnitTest/xrc.UnitTest.csproj
+++ b/test/xrc.UnitTest/xrc.UnitTest.csproj
@@ -43,7 +43,8 @@
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
-    <Reference Include="Moq">
+    <Reference Include="Moq, Version=4.0.10827.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Moq.4.0.10827\lib\NET40\Moq.dll</HintPath>
     </Reference>
     <Reference Include="System" />
@@ -74,14 +75,13 @@
     <Compile Include="Modules\TestModule.cs" />
     <Compile Include="Pages\Parsers\PageParserResult_Test.cs" />
     <Compile Include="Pages\Parsers\XsltParserService_Test.cs" />
-    <Compile Include="Pages\Parsers\RazorParserService_Test.cs" />
     <Compile Include="Pages\Parsers\HtmlParserService_Test.cs" />
     <Compile Include="Pages\Parsers\XHtmlParserService_Test.cs" />
     <Compile Include="Pages\Parsers\XrcParserService_Test.cs" />
     <Compile Include="Pages\ParametricUriSegment_Test.cs" />
     <Compile Include="UriExtensions_Test.cs" />
     <Compile Include="Kernel\XrcService_Test.cs" />
-    <Compile Include="Mocks\RendererCatalogServiceMock.cs" />
+    <Compile Include="Mocks\ViewCatalogServiceMock.cs" />
     <Compile Include="Mocks\ModuleFactoryMock.cs" />
     <Compile Include="Mocks\ModuleCatalogServiceMock.cs" />
     <Compile Include="Mocks\ScriptExpressionMock.cs" />
